# clip

./: .gitignore  all_results_comparison_directory_summary.csv  all_results_comparison_with_dates.csv  build_fine_text_index.py  check.ipynb  compare_eval_outputs_peskavlp_vs_pretrained.csv  compare_results.py  dataset_best_value_comparison.csv  dataset_model_comparison.csv  dataset_overall_comparison.csv  dataset_primary_metric_comparison.csv  dataset_primary_metric_comparison_peskavlp_3_有方法_vs_无方法.csv  dataset_primary_metric_comparison_peskavlp_vs_plain.csv  dataset_primary_metric_comparison_有方法_vs_无方法.csv  dated_complete_results_summary.csv  downstream_datasets.py  eval_reference_surglavi_table2_sota.csv  eval_reference_surglavi_table2_sota_beta.csv  eval_report_utils.py  generate_surgclip_comparison.py  missing_videos.csv  mixed_level_batch_sampler.py  model.py  outputs11_vs_surglavi_table2.csv  outputs12_vs_surglavi_table2.csv  outputs13_vs_surglavi_table2.csv  outputs14_vs_surglavi_table2.csv  outputs15_vs_surglavi_table2.csv  peskavlp_adapter.py  peskavlp_reference_comparison.csv  prepare_pretrain_videos.py  pretrain_dataset.py  pretrain_manifest_cache.py  run_eval_0.sh  run_eval_1.sh  run_eval_2.sh  run_eval_3.sh  run_eval_peskavlp_0.sh  run_eval_peskavlp_1.sh  run_eval_peskavlp_2.sh  (+36 more)
auto/: 01.csv  (+20 more)
surgclip/: MODEL.md  pyproject.toml
surgclip/surgclip/: __init__.py  bert_tokenizer.py  config.py  download.py  model.py  tokenizer.py  transforms.py
surgclip/surgclip/configs/: config_bert.json  config_vit.json
surgclip/surgclip/utils/: config.py  easydict.py
(+10876 files in other folders)
